# abstract_abstraction

./: CMakeLists.txt  README.md  unit_tests.cpp
.github/workflows/: ci.yml
src/abstraction/: data_types.h
src/vs/: tensor.h  tensorI.h  trig_ops.h  vector.h  vectorI.h
test/: test_vector_space.cpp
vs/: data_types.h  tensor.h  tensorI.h  trig_ops.h  vector.h  vectorI.h  vector_space.h
